 - Use libav for input file parsing, rather than custom code. This
   adds support for many different input file formats outside of
   PPM/PBM/PGM, as long as libav can reconduct them to a pixel format
   that is implemented during parsing.
 - Tests are now executed against the original PNG files rather than
   through converted PGM/PPM, this drops the netpbm dependency on the
   tests.

Release 5, 2013-06-28
 - Implement mathematically accurate interpolation, using cubic
   algorithm by default.

Release 0.4.2, 2012-06-22
 - Fix regressions from 0.4.1 on multi-page processing.
 - Add tests to make sure that multi-page processing works.

Release 0.4.1, 2012-06-20
 - Source code split in multiple units to make it more manageable.
 - Options parsing is now performed through getopt_long_only(); this
   makes it compatible with the old parameters, while avoiding the
   long-winded original parser.
 - The --input-sequence and --output-sequence parameters have been
   removed for ease of porting; man page describes the new input
   and output file matching.
 - Tests are executed with the new parallel harness for speed.
 - Improved blurfilter by Felix Janda.

Release 0.4, 2011-10-08:
 - New buildsystem, based on standard GNU autotools.
 - Optimisation of source code to produce slimmer, faster binaries.
 - The sources now compile using C99, and support GCC, Pathscale and
   Clang compilers.
 - Options are now documented in the unpaper(1) man page, rather than
   in the code.

Release 0.3, 2007-12-31:
- Moved history-information to CHANGELOG-file.
- Two distribution archives become part of the release, one source-only
  variant, and one binary-distribution for i386/Linux. Archive
  unpaper-bin-0.3.tar.gz contains everything in unpaper-0.3.tar.gz, plus a
  binary executable file in folder bin/.
- The final distribution packages are now created with a standard-tar via
  shell execution. Older versions were tarred and gzipped by ANT 1.6.5's tar-